--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,37 @@ body {
     position: relative;
 }
 .affix {
-    top:0;
+    top: 0;
     width: 100%;
-    z-index: 9999 !important;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    background-color: #6633ff;
+    border-color: #6633ff;
 }
+
+.affix a {
+    color: #fff !important;
+    padding: 15px !important;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
+.affix-top a {
+    padding: 20px !important;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover,
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover,
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+    background-color: #4a25ba;
+}
+
+.navbar-nav>li>.dropdown-menu {
+    background-color: #6633ff;
+}
+
 .affix ~ .container-fluid {
     position: relative;
     top: 50px;
