--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
     width: 100%;
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
-    background-color: #6633ff;
-    border-color: #6633ff;
+    background-color: #9933CC;
+    border-color: #9933CC;
 }
 
 .affix a {
@@ -27,11 +27,11 @@ body {
 .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover,
 .dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover,
 .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
-    background-color: #4a25ba;
+    background-color: #732699;
 }
 
 .navbar-nav>li>.dropdown-menu {
-    background-color: #6633ff;
+    background-color: #9933CC;
 }
 
 .affix ~ .container-fluid {
@@ -42,12 +42,12 @@ body {
 /*my styles*/
 #header {
     height: 200px;
-    background: #6633ff;
+    background: #9933CC;
 }
 
 #footer {
     height: 200px;
-    background: #9933CC;
+    background: #6633ff;
 }
 
 h1 {
