--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,26 @@ body {
     top: 50px;
 }
 
+/*back to top button styles*/
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+    background-color: #9933CC;
+    border-color: #732699;
+    -webkit-box-shadow: 1px 1px 5px #000;
+    -moz-box-shadow: 1px 1px 5px #000;
+    box-shadow: 1px 1px 5px #000;
+}
+
+.back-to-top:hover {
+    background-color: #732699;
+    border-color: #732699;
+}
+
+
 /*my styles*/
 #header {
     height: 200px;
@@ -75,7 +95,7 @@ h1 {
 
 
 #section1 {
-    background: #cc00cc;
+    background: #333300;
 }
 
 #section2 {
